# docx-mailmerge

./: .gitignore  README.rst  mailmerge.py  pyproject.toml  requirements_dev.txt  tox.ini
src/mailmerge/: __init__.py  field.py  mailmerge.py  mergedata.py  mergeoptions.py  part.py  richtext.py
tests/: test_field_with_paragraph.docx  test_field_with_paragraph_and_nested_field.docx  test_footnote_header_footer.py  test_formatting.py  test_formatting_with_paragraph.py  test_if_field.py  test_if_with_paragraph.docx  test_issue54_spaces.py  test_keep_fields.docx  test_keep_fields.py  test_merge_nested_table_rows.docx  test_merge_nested_table_rows.py  test_merge_pages.py  test_merge_table_multipart.py  test_merge_table_rows.py  test_merge_templates.py  test_multiple_elements.py  test_nested_fields.py  test_next_record.py  test_nextif.docx  test_rich_text_payload.py  test_skipif.docx  test_unique_id.py  test_winword2010.py  utils.py
