[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-mailmerge2"
authors = [{name = "Iulian Ciorăscu", email = "ciulian@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
]
dependencies = [
    "lxml>=3.1.0",
]
description = "Performs a Mail Merge on docx (Microsoft Office Word) files"
dynamic = ["version"]
keywords = ["docx", "office", "openxml", "word"]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Homepage = "http://github.com/iulica/docx-mailmerge"
Issues = "http://github.com/iulica/docx-mailmerge/issues"

[tool.ruff]
exclude = []
line-length = 100
target-version = "py38"

[tool.setuptools.dynamic]
version = {attr = "mailmerge.__version__"}
